--- a/proyecto-uno-ee-Xiaomi-main/proyectouno_Adrian_Velasquez/style.css
+++ b/proyecto-uno-ee-Xiaomi-main/proyectouno_Adrian_Velasquez/style.css
@@ -1,3 +1,15 @@
+/*
+font-family: "Momo Trust Display", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+*/
+
+.logo {
+    position: absolute;
+    top: 2%;
+    left: 3%;
+}
+
 ul{
     text-align: center;
     list-style-type: none;
@@ -7,6 +19,9 @@ ul{
 body{
     background-color: white;
     color: black;
+    font-family: "Momo Trust Display", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 
 
 }
@@ -18,29 +33,110 @@ body{
 }
 
 .img{
+    border-style: solid;
+    border-color: black;
+    align-content: center;
+    border-radius: 20px;
     width: 500px;
     height: 250px;
     object-fit: cover;
 }
 
+.imagenes{
+
+    align-items: center;
+    width: 250px;
+    height: auto;
+    border-radius: 10px;
+}
+
+
+
+
 header{
-    background-color: white;
+    border-radius: 10px;
+    background-color: rgb(199, 199, 199);
     padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
-header nav {
-    display: flex;
-    gap: 15px;
     
-}
+
 a{
     text-decoration: none;
     color: black;
 }
 
 nav a:hover{
-    color: blue;
+    color: rgb(221, 102, 33);
+}
+
+.contenedor{
+    text-align: center;
+
+}
+
+.store{
+    position: absolute;
+    top:0.5%;
+    left: 10%;
+}
+
+.mobile{
+    position: absolute;
+    top:0.5%;
+    left: 16%;
+}
+
+.warables{
+    position: absolute;
+    top: 0.5%;
+    left: 23%;
+}
+
+.smart{
+    position: absolute;
+    top:0.5%;
+    left: 32%;
+}
+
+.lifestyle{
+     position: absolute;
+    top: 0.5%;
+    left: 42.5%;
+}
+.Explore{
+    position: absolute;
+    top: 0.5%;
+    left: 70.5%;
+}
+
+.Help{
+    position: absolute;
+    top: 0.5%;
+    left: 77.5%;
+}
+
+.Community{
+    position: absolute;
+    top: 0.5%;
+    left: 82.5%;
+}
+
+.hyper{
+    position: absolute;
+    top: 490%;
+    left: 80%;
+}
+.ios{
+    position: absolute;
+    top: 490%;
+    left: 45%; 
+}
+
+.stage{
+     position: absolute;
+    top: 490%;
+    left: 12%;
 }
